--- a/packages/app/obojobo-document-engine/src/scripts/oboeditor/components/page-editor.scss
+++ b/packages/app/obojobo-document-engine/src/scripts/oboeditor/components/page-editor.scss
@@ -12,6 +12,7 @@
 	background-color: $color-bg;
 	border-radius: $dimension-rounded-radius;
 	min-height: calc(100vh - 10.5em);
+	position: relative;
 
 	.obojobo-draft--modules--module {
 		margin: 3em auto;
